<resources>
    <string name="app_name">Task Manager</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="instruction">Instructions</string>
    <string name="instruction1">1. Your password must contain at least 8 characters</string>
    <string name="instruction2">2. New password and old password must be different</string>
    <string name="instruction3">3. Your password must contain uppercase, lowercase letters and numbers</string>
    <string name="instruction4">4. Your password must be changed every 2 months</string>


</resources>
