<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorDarkBlue"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="26dp"
        android:background="@layout/rounded_border_edittext"
        android:hint="@string/old_password"
        android:inputType="textVisiblePassword"
        android:padding="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="26dp"
        android:background="@layout/rounded_border_edittext"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="190dp"
        android:layout_marginRight="26dp"
        android:background="@layout/rounded_border_edittext"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="5dp"
        tools:ignore="Autofill" />
    
    <Button
        android:layout_width="349dp"
        android:layout_height="40dp"
        android:background="@color/colorDarkBlue"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_marginTop="270dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginStart="26dp"
        android:text="@string/instruction"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginStart="50dp"
        android:text="@string/instruction1"
        android:textColor="@color/colorgrey"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/instruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:layout_marginStart="50dp"
        android:text="@string/instruction2"
        android:textColor="@color/colorgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/instruction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="467dp"
        android:layout_marginStart="50dp"
        android:text="@string/instruction3"
        android:textColor="@color/colorgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/instruction4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="505dp"
        android:layout_marginStart="50dp"
        android:text="@string/instruction4"
        android:textColor="@color/colorgrey"
        android:textSize="15sp" />
</RelativeLayout>